# restsession

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  create-test-env.yml  install-poetry.yml  linting.yml  main.yml  pull_request.yml  python-package.yml  python-venv-jobs.yml  release.yml  setup.yml  test.yml  testing-entrypoint.yml
pyats/: job.py  test_code.py  test_requests.py
pyats/datafiles/: datafile.yml  object_test_attributes.yml
restsession/: __init__.py  default_hooks.py  defaults.py  exceptions.py  models.py  newmodels.py  newsession.py  session.py  session.py.request-redirect  session_singleton.py
src/restsession/: __init__.py  defaults.py  exceptions.py  metaclass.py  models.py  session.py  session_singleton.py
tests/: BaseHttpServer.py  OLD-test_requests.py  TODO-test_hooks.py  __init__.py  all_tests.py  conftest.py  job.py  pytest.ini  test_auth.py  test_authorization.py  test_basic_requests.py  test_code.py  test_combinations.py  test_exceptions.py  test_headers.py  test_metaclass.py  test_object_attributes.py  test_object_creation.py  test_redirects.py  test_requests.py  test_response_hooks.py  test_retries.py
tests/datafiles/: datafile.yml  object_test_attributes.yml  subsection_datafile.yml  testbed.yml  trigger_datafile.yml
tests/test_code/: test_exceptions.py  test_metaclass.py  test_object_attributes.py  test_object_creation.py
tests/test_requests/: test_auth.py  test_basic_requests.py  test_combinations.py  test_headers.py  test_redirects.py  test_retries.py
