[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "restsession"
version = "0.0.9"
authors = [
  { name="Palmer Sample", email="palmer@palmersample.net" },
]
description = "RESTful API-friendly implementation of the 'requests' library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'pydantic==2.6.1',
    'requests==2.31.0',
    'urllib3 == 2.2.0',
]

[project.urls]
"Homepage" = "https://github.com/palmersample/restsession"
"Bug Tracker" = "https://github.com/palmersample/restsession/issues"
