[project]
name = "restsession"
version = "0.1.2"
description = "RESTful API-friendly implementation of the 'requests' library"
authors = [
    {name = "Palmer Sample",email = "palmer@palmersample.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pydantic (~=2.6.1)",
    "requests (~=2.32.0)",
    "urllib3 (~=2.5.0)",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
addopts = [
    "--import-mode=importlib",
]


[tool.poetry.group.test.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-html = "^4.1.1"
requests-toolbelt = "^1.0.0"

[project.urls]
"Homepage" = "https://github.com/palmersample/restsession"
"Bug Tracker" = "https://github.com/palmersample/restsession/issues"
