[project]
name = "restsession"
version = "1.0.0"
description = "RESTful API-friendly implementation of the 'requests' library"
authors = [
    {name = "Palmer Sample",email = "palmer@palmersample.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pydantic (~=2.11.7)",
    "requests (~=2.32.0)",
    "urllib3 (~=2.5.0)",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/palmersample/restsession"
"Bug Tracker" = "https://github.com/palmersample/restsession/issues"


[tool.restsession]
dev-python-version = "3.12"
poetry-version = "2.1.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"

testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
pythonpath = [
    "src",
]
addopts = [
    "--import-mode=importlib",
    "--cov=restsession",
    "--cov-report=term-missing",
]
markers = [
    "auth: Module marker - run all tests in test_auth.py",
    "requests: Module marker - run all tests in test_basic_requests.py",
    "combinations: Module marker - run all tests in test_combinations.py",
    "headers: Module marker - run all tests in test_headers.py",
    "attrs: Module marker - run all tests in test_object_attributes.py",
    "objects: Module marker - run all tests in test_object_creation.py",
    "redirects: Module marker - run all tests in test_redirects.py",
    "retries: Module marker - run all tests in test_retries.py",
    "exceptions: Module marker - run all tests in test_exceptions.py",
    "basic_auth: Run only the tests related to basic authentication",
    "custom_auth: Run only the tests related to custom authentication",
    "redirect_auth: Run tests related to authentication with redirects",
    "disrespect: Run tests that are disrespectful to the server (i.e. ignoring Retry-After headers)",
]


[tool.poetry.group.test.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-html = "^4.1.1"
requests-toolbelt = "^1.0.0"
pytest-cov = "^6.2.1"
